--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,5 +48,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PH'
 - !lcsh 'Hungary -- Fiction'
+- GITenberg
 title: 'The Village Notary: A Romance of Hungarian Life'
 url: http://www.gutenberg.org/ebooks/34819
